--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "json-server": "^0.12.1"
+    "global": "^4.3.2",
+    "json-server": "^0.12.1",
+    "now": "^10.2.2"
   },
   "scripts": {
     "start": "json-server enchiridion.json"
